# jovial

./: .gitignore  Cargo.toml  Dockerfile  Makefile  REPO_STRUCTURE.md  jovial.yaml.example
.claude/: settings.local.json
.github/workflows/: ci.yml  plugin-validation.yml  release.yml
crates/jovial-ast/: Cargo.toml
crates/jovial-ast/src/: go.rs  java.rs  lib.rs  span.rs  type_resolver.rs
crates/jovial-cli/: Cargo.toml
crates/jovial-cli/src/: config.rs  discovery.rs  extractor.rs  loader.rs  main.rs
crates/jovial-cli/src/commands/: explain.rs  init_plugin.rs  install.rs  mod.rs  publish.rs  search.rs  test_plugin.rs  transpile.rs
crates/jovial-cli/tests/: e2e_transpile.rs
crates/jovial-codegen/: Cargo.toml
crates/jovial-codegen/src/: handlers.rs  lib.rs  models.rs  project.rs  services.rs  wire.rs
crates/jovial-emitter/: Cargo.toml
crates/jovial-emitter/src/: emitter.rs  formatter.rs  go_mod.rs  imports.rs  lib.rs
crates/jovial-manifest/: Cargo.toml
crates/jovial-manifest/src/: advice.rs  beans.rs  endpoints.rs  entities.rs  lib.rs  unresolved.rs
crates/jovial-parser/: Cargo.toml
crates/jovial-parser/src/: error.rs  lexer.rs  lib.rs  lower.rs  lower_expr.rs  lower_stmt.rs  lower_type.rs  parser.rs  resolver.rs  tests.rs  type_resolver.rs
crates/jovial-parser/src/snapshots/: jovial_parser__tests__tests__snapshot_complex_expressions.snap  jovial_parser__tests__tests__snapshot_enum_with_body.snap  jovial_parser__tests__tests__snapshot_spring_controller.snap
crates/jovial-plugin/: Cargo.toml
crates/jovial-plugin/src/: context.rs  error.rs  lib.rs  registry.rs  traits.rs  types.rs
crates/jovial-walker/: Cargo.toml
crates/jovial-walker/src/: convert_decl.rs  convert_expr.rs  convert_helpers.rs  convert_stmt.rs  default_convert.rs  lib.rs  type_map.rs  walker.rs
demo/: jovial.yaml  manifest.json
demo/src/main/java/com/acme/bookstore/: Book.java  BookController.java  BookRepository.java  BookService.java
plugin-sdk/examples/apache-httpclient/: Cargo.toml
plugin-sdk/examples/apache-httpclient/src/: client.rs  lib.rs  request.rs
plugin-sdk/examples/apache-httpclient/testdata/: expected.go  input.java
plugin-sdk/examples/minimal/: Cargo.toml
plugin-sdk/examples/minimal/src/: lib.rs
plugin-sdk/examples/minimal/testdata/: expected.go  input.java
plugin-sdk/template/: Cargo.toml.tmpl  jovial-plugin.yaml.tmpl
plugin-sdk/template/src/: lib.rs.tmpl
plugin-sdk/template/testdata/: expected.go.tmpl  input.java.tmpl
plugins/builtin/guava/: Cargo.toml  jovial-plugin.yaml
plugins/builtin/guava/src/: collections.rs  lib.rs  optional.rs  preconditions.rs  strings.rs
plugins/builtin/guava/testdata/: expected.go  input.java
plugins/builtin/jackson/: Cargo.toml  jovial-plugin.yaml
plugins/builtin/jackson/src/: annotations.rs  lib.rs  object_mapper.rs
plugins/builtin/jackson/testdata/: expected.go  input.java
plugins/builtin/java-collections/: Cargo.toml
plugins/builtin/java-collections/src/: lib.rs
plugins/builtin/java-io/: Cargo.toml
plugins/builtin/java-io/src/: lib.rs
plugins/builtin/java-strings/: Cargo.toml
plugins/builtin/java-strings/src/: lib.rs
plugins/builtin/lombok/: Cargo.toml  jovial-plugin.yaml
plugins/builtin/lombok/src/: lib.rs
plugins/builtin/lombok/testdata/: expected.go  input.java
plugins/builtin/slf4j/: Cargo.toml  jovial-plugin.yaml
plugins/builtin/slf4j/src/: lib.rs
plugins/builtin/slf4j/testdata/: expected.go  input.java
plugins/builtin/spring-data/: Cargo.toml  jovial-plugin.yaml
plugins/builtin/spring-data/src/: entity.rs  lib.rs  relationships.rs  repository.rs
plugins/builtin/spring-data/testdata/: expected.go  input.java
plugins/builtin/spring-tx/: Cargo.toml  jovial-plugin.yaml
plugins/builtin/spring-tx/src/: lib.rs
plugins/builtin/spring-tx/testdata/: expected.go  input.java
plugins/builtin/spring-web/: Cargo.toml  jovial-plugin.yaml
plugins/builtin/spring-web/src/: controller.rs  lib.rs  params.rs  response.rs
plugins/builtin/spring-web/testdata/: expected.go  input.java
registry/scripts/: publish.sh  validate.sh
tests/fixtures/complex-java/: jovial.yaml  manifest.json
tests/fixtures/complex-java/src/main/java/com/acme/complex/: TaskProcessor.java
tests/fixtures/petclinic/: manifest.json
tests/integration/: explain_test.rs  transpile_test.rs
tests/plugin_tests/: guava_test.rs  jackson_test.rs  spring_data_test.rs  spring_web_test.rs
