[workspace]
resolver = "2"
members = [
    "crates/jovial-ast",
    "crates/jovial-manifest",
    "crates/jovial-plugin",
    "crates/jovial-parser",
    "crates/jovial-emitter",
    "crates/jovial-walker",
    "crates/jovial-codegen",
    "crates/jovial-cli",
    "plugins/builtin/java-collections",
    "plugins/builtin/java-strings",
    "plugins/builtin/java-io",
    "plugin-sdk/examples/minimal",
    "plugin-sdk/examples/apache-httpclient",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
# Internal crates
jovial-ast = { path = "crates/jovial-ast" }
jovial-manifest = { path = "crates/jovial-manifest" }
jovial-plugin = { path = "crates/jovial-plugin" }
jovial-parser = { path = "crates/jovial-parser" }
jovial-emitter = { path = "crates/jovial-emitter" }
jovial-walker = { path = "crates/jovial-walker" }
jovial-codegen = { path = "crates/jovial-codegen" }

# Builtin plugins
jovial-plugin-java-collections = { path = "plugins/builtin/java-collections" }
jovial-plugin-java-strings = { path = "plugins/builtin/java-strings" }
jovial-plugin-java-io = { path = "plugins/builtin/java-io" }

# External dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
insta = "1"
tree-sitter = "0.24"
tree-sitter-java = "0.23"
miette = { version = "7", features = ["fancy"] }
walkdir = "2"
which = "7"
