[package]
name = "jovial-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "jovial"
path = "src/main.rs"

[dependencies]
jovial-ast = { workspace = true }
jovial-manifest = { workspace = true }
jovial-plugin = { workspace = true }
jovial-parser = { workspace = true }
jovial-emitter = { workspace = true }
jovial-walker = { workspace = true }
jovial-codegen = { workspace = true }

# Builtin plugins
jovial-plugin-java-collections = { workspace = true }
jovial-plugin-java-strings = { workspace = true }
jovial-plugin-java-io = { workspace = true }

clap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
