[package]
name = "jovial-parser"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
jovial-ast = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-java = { workspace = true }
miette = { workspace = true }
log = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml"] }
serde_json = { workspace = true }
